# confuse-jsonschema

./: README.md  __init__.py  confuse_jsonschema.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
confuse_jsonschema/: __init__.py  formats.py  resolver.py  templates.py  to_template.py
tests/: test_confuse_jsonschema.py
