[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "confuse-jsonschema"
version = "0.1.0"
description = "Convert JSON Schema to Confuse templates"
readme = "README.md"
authors = [{name = "Christophe-Marie Duquesne", email = "chmd@chmd.fr"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Configuration",
]
keywords = ["json", "schema", "confuse", "configuration", "yaml"]
requires-python = ">=3.8"
dependencies = [
    "confuse>=1.7.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/chmduquesne/confuse-jsonschema"
Repository = "https://github.com/chmduquesne/confuse-jsonschema"
Issues = "https://github.com/chmduquesne/confuse-jsonschema/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["confuse_jsonschema*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true